--- a/.env
+++ b/.env
@@ -1,1 +1,19 @@
-DATABASE_URL=sqlite+aiosqlite:///./test.db
+# FastAPI nastavení
+DEBUG=True
+SECRET_KEY=your-secret-key-change-this-in-production
+
+# Databáze
+DATABASE_URL=sqlite:///./data/rpi_manager.db
+
+# Nahrávání souborů
+UPLOAD_FOLDER=uploads
+CONFIG_FOLDER=config_files
+MAX_FILE_SIZE=10485760  # 10MB
+
+# Server nastavení
+HOST=0.0.0.0
+PORT=8000
+
+DATABASE_URL=sqlite+aiosqlite:///./rpi.db
+IMAGE_UPLOAD_DIR=./images
+CONFIG_UPLOAD_DIR=./config_files
