--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,20 @@
-[build-system]
-requires = ["setuptools", "wheel"]
-build-backend = "setuptools.build.meta"
-
-[project]
-name = "rpi-manager"
+[tool.poetry]
+name = "rpi-server"
 version = "0.1.0"
-dependencies = [
-    "fastapi",
-    "uvicorn",
-    "sqlalchemy",
-    "aiosqlite",
-    "pydantic",
-]
+description = "Server pro správu RPi jednotek"
+authors = ["Tvé Jméno <email@example.com>"]
+
+[tool.poetry.dependencies]
+python = "^3.10"
+fastapi = "0.104.1"
+uvicorn = { version = "0.24.0", extras = ["standard"] }
+sqlalchemy = "2.0.23"
+aiofiles = "23.2.1"
+pydantic = "2.4.2"
+python-multipart = "0.0.6"
+python-dotenv = "1.0.0"
+jinja2 = "3.1.2"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
