--- a/app/.env
+++ b/app/.env
@@ -3,17 +3,15 @@ DEBUG=True
 SECRET_KEY=your-secret-key-change-this-in-production
 
 # Databáze
-DATABASE_URL=sqlite:///./data/rpi_manager.db
+DATABASE_URL=sqlite:///home/jan/PycharmProjects/RPI_adminServer_2/app/db/rpi_manager.db
 
 # Nahrávání souborů
-UPLOAD_FOLDER=uploads
-CONFIG_FOLDER=config_files
+IMAGE_UPLOAD_DIR=./data/images
+CONFIG_UPLOAD_DIR=./data/config_files
 MAX_FILE_SIZE=10485760  # 10MB
 
 # Server nastavení
 HOST=0.0.0.0
 PORT=8000
 
-DATABASE_URL=sqlite+aiosqlite:///./rpi.db
-IMAGE_UPLOAD_DIR=./images
-CONFIG_UPLOAD_DIR=./config_files
+PYTHONPATH=.
