--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,13 @@ sqlalchemy = "2.0.23"
 aiofiles = "23.2.1"
 pydantic = "2.4.2"
 python-multipart = "0.0.6"
-python-dotenv = "1.0.0"
+python-dotenv = "^1.1.1"
 jinja2 = "3.1.2"
+routers = "^0.10.1"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+export-openapi = "scripts.export_openapi:main"
